<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_photo_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:contentDescription="@string/ui_profile_photo_content_description"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:srcCompat="@mipmap/ic_launcher">

            </ImageView>

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:text="@string/ui_button_change_title" />

        </LinearLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rname_etext"
            android:hint="@string/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textAutoComplete"
            android:autofillHints="true">

        </com.google.android.material.textfield.TextInputEditText>

        <RadioGroup
            android:id="@+id/rgender_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/rfemale_rbutton"
                android:checked="false"
                android:text="@string/female_text" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/rmale_rbutton"
                android:checked="false"
                android:text="@string/male_text" />

        </RadioGroup>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/remail_etext"
            android:hint="@string/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress">
        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rpassword_etext"
                android:hint="@string/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rphone_etext"
            android:hint="@string/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="phone">
        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rmajor_etext"
            android:hint="@string/major_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rdclass_etext"
            android:hint="@string/dartmouth_class_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="number">
        </com.google.android.material.textfield.TextInputEditText>


    </LinearLayout>

</ScrollView>